--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 	<div class="text-center">
 		<h1>Hello, I'm Baptiste </h1>
-		<img src="images/Profile.jpg" alt="Baptiste Bellon" id="pic">
+		<img src="images/profile.jpg" alt="Baptiste Bellon" id="pic">
 		
 	</div>
 		<div class="text-center">
-			<a href="http://www.2bsystem.fr" target="_blank"><img src="images/Nouveau logo.png" alt="Baptiste Bellon" id="pic"></a>
+			<a href="http://www.2bsystem.fr" target="_blank"><img src="images/nouveau-logo.png" alt="Baptiste Bellon" id="pic"></a>
 <script src="https://kit.fontawesome.com/a5aed213e7.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao|Oswald&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
