--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="text-center">
 		<h1>Hello, I'm Baptiste </h1>
-		<img src="images/profile.jpg" alt="Baptiste Bellon" id="pic">
+		<img src="images/profile-picture.png" alt="Baptiste Bellon" id="pic">
 		
 	</div>
 		<div class="text-center">
